css/style.css
/* ... */
@media (min-width:320px) and (max-width:414px){

    #jungle-neon-start {
    
        animation: pulsate2 1.5s infinite alternate;
        color: #fff;
        margin-top: 40px;
        margin-bottom: 30px;
    }
}

#jungle-neon-start h2 {
    font-size: 2.0rem;
    white-space: nowrap;
}

@media (min-width:320px) and (max-width:414px){

    #jungle-neon-start h2 {
        font-size: 1.0rem;
        white-space: nowrap;
    }
}

/* Pulsating animation */

@keyframes pulsate2 {
    100% {
  
        text-shadow:
        0 0 4px #fff,
        0 0 8px #fff,
        0 0 10px #fff,
        0 0 40px #ff1493,
        0 0 80px #ff1493,
        0 0 90px #ff1493,
        0 0 100px #ff1493,
        0 0 150px #ff1493;
    }
}

/* Pulsating animation OFF for accessibility */

@media screen and (prefers-reduced-motion) { 
    
    h2 {
        animation: none;
    }
}

/* ================================================================ Game Board - Mars Attacks =================================================================*/

#mars-neon-start {
    animation: pulsate3 1.5s infinite alternate;
    color: #fff;
    margin-top: 80px;
    margin-bottom: 60px;
}

@media (min-width:320px) and (max-width:414px){

    #mars-neon-start {
    
        animation: pulsate3 1.5s infinite alternate;
        color: #fff;
        margin-top: 40px;
        margin-bottom: 30px;
    }
}

#mars-neon-start h2 {
    font-size: 2.0rem;
    white-space: nowrap;
}

@media (min-width:320px) and (max-width:414px){

    #mars-neon-start h2 {
        font-size: 1.0rem;
        white-space: nowrap;
    }
}

/* Pulsating animation */

@keyframes pulsate3 {
    100% {
  
        text-shadow:
        0 0 4px #fff,
        0 0 8px #fff,
        0 0 10px #fff,
        0 0 40px #e35a17,
        0 0 80px #e35a17,
        0 0 90px #e35a17,
        0 0 100px #e35a17,
        0 0 150px #e35a17;
    }
}

/* Pulsating animation OFF for accessibility */

@media screen and (prefers-reduced-motion) { 
    
    h2 {
        animation: none;
    }
}

.board .row {
    padding-left: 25%;
    padding-right: 25%;
}

/* ================================================================ Game Board Rows City-Nights ================================================================= */

#game-board-city-lights .row div {
	display: inline-block;
	height: 100px;
	width: 100px;
	background-color: #000;
	border: 0.2rem solid #fff;
    border-radius: 2rem;
    padding: 0.4em;
    box-shadow: 
        0 0 .2rem #fff,
        0 0 .2rem #fff,
        0 0 2rem #0839f9,
        0 0 0.8rem #0839f9,
        0 0 2.8rem #0839f9,
        inset 0 0 1.3rem #0839f9;
}

@media (min-width:320px) and (max-width:414px){

    #game-board-city-lights .row div {
        display: inline-block;
        height: 40px;
        width: 40px;
        background-color: #000;
        border: 0.1rem solid #fff;
        border-radius: 1rem;
        padding: 0.2em;
        box-shadow: 
            0 0 .1rem #fff,
            0 0 .1rem #fff,
            0 0 1rem #0839f9,
            0 0 0.4rem #0839f9,
            0 0 1.4rem #0839f9,
            inset 0 0 0.5rem #0839f9;
    }
}

/* ================================================================ Game Board Rows Jungle ================================================================= */

#game-board-jungle .row div {
	display: inline-block;
	height: 100px;
	width: 100px;
	background-color: #000;
	border: 0.2rem solid #fff;
    border-radius: 2rem;
    padding: 0.4em;
    box-shadow: 
        0 0 .2rem #fff,
        0 0 .2rem #fff,
        0 0 2rem #ff1493,
        0 0 0.8rem #ff1493,
        0 0 2.8rem #ff1493,
        inset 0 0 1.3rem #ff1493;
}

@media (min-width:320px) and (max-width:414px){

    #game-board-jungle .row div {
        display: inline-block;
        height: 40px;
        width: 40px;
        background-color: #000;
        border: 0.1rem solid #fff;
        border-radius: 1rem;
        padding: 0.2em;
        box-shadow: 
            0 0 .1rem #fff,
            0 0 .1rem #fff,
            0 0 1rem #ff1493,
            0 0 0.4rem #ff1493,
            0 0 1.4rem #ff1493,
            inset 0 0 0.5rem #ff1493;
    }
}

/* ================================================================ Game Board Rows Mars Attacks ================================================================= */

#game-board-mars-attacks .row div {
	display: inline-block;
	height: 100px;
	width: 100px;
	background-color: #000;
	border: 0.2rem solid #fff;
    border-radius: 2rem;
    padding: 0.4em;
    box-shadow: 
        0 0 .2rem #fff,
        0 0 .2rem #fff,
        0 0 2rem #e35a17,
        0 0 0.8rem #e35a17,
        0 0 2.8rem #e35a17,
        inset 0 0 1.3rem #e35a17;
}

@media (min-width:320px) and (max-width:414px){

    #game-board-mars-attacks .row div {
        display: inline-block;
        height: 40px;
        width: 40px;
        background-color: #000;
        border: 0.1rem solid #fff;
        border-radius: 1rem;
        padding: 0.2em;
        box-shadow: 
            0 0 .1rem #fff,
            0 0 .1rem #fff,
            0 0 1rem #e35a17,
            0 0 0.4rem #e35a17,
            0 0 1.4rem #e35a17,
            inset 0 0 0.5rem #e35a17;
    }
}

#game-board .row div:hover {
	cursor: pointer;
}

#game-board .row div.answer {
	border: 0.2rem solid #fff;
    border-radius: 2rem;
    padding: 0.4em;
    box-shadow: 
        0 0 .2rem #f7ef8a,
        0 0 .2rem #f7ef8a,
        0 0 2rem #ae8625,
        0 0 0.8rem #ae8625,
        0 0 1.8rem #ae8625,
        inset 0 0 1rem #ae8625;
}

@media (min-width:320px) and (max-width:414px){

    #game-board .row div.answer {
        border: 0.1rem solid #fff;
        border-radius: 1rem;
        padding: 0.2em;
        box-shadow: 
            0 0 .1rem #f7ef8a,
            0 0 .1rem #f7ef8a,
            0 0 1rem #ae8625,
            0 0 0.4rem #ae8625,
            0 0 0.9rem #ae8625,
            inset 0 0 0.5rem #ae8625;
    }
}

.on {
	background-color: #fff !important;
}
/* ... */

